Fixed the contact page  - White space issue

--- a/src/pages/Contact/index.css
+++ b/src/pages/Contact/index.css
@@ -1,211 +1,203 @@
-.ContactContainer{
-    display: flex;
+.ContactContainer {
+  display: flex;
+  /* height: 100%; */
+  min-height: 100vh;
+  margin: 0;
+  /* flex-grow: 1; */
 }
 
-.ContactContainer > div{
-    width: 50%;
-    padding: 50px 50px;
+.ContactContainer > div {
+  width: 50%;
+  padding: 50px 50px;
 }
 
-.ContactLeftSection{
-    box-shadow: none;
+.ContactLeftSection {
+  box-shadow: none;
 }
 .shadow-none {
-    box-shadow: none !important;
-  }
-
+  box-shadow: none !important;
+}
 
 .ContactLeftSection h1.shadow-none {
-text-shadow: none !important;
-  }
+  text-shadow: none !important;
+}
 
 .ContactLeftSection > h1 {
-    color: #141721;
-        
-        font-weight: 800;
-        font-size: 60px;
-        position: relative;
-        padding: 10px 0;
-        width: 450px;
-       
-     
-    
-    
+  color: #141721;
+
+  font-weight: 800;
+  font-size: 60px;
+  position: relative;
+  padding: 10px 0;
+  width: 450px;
 }
 
 .ContactLeftSection > h1::before {
-    position: absolute;
-    content: "";
-    height: 10px;
-    width: 22x0px;
-    margin: auto;
-    left: 10px;
-    border-radius: 10px;
-    bottom: 0;
-    background: #22bbff;
-    box-shadow: none;
-  
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 22x0px;
+  margin: auto;
+  left: 10px;
+  border-radius: 10px;
+  bottom: 0;
+  background: #22bbff;
+  box-shadow: none;
 }
 
 .ContactLeftSection > h1::after {
-    position: absolute;
-    content: "";
-    height: 10px;
-    width: 100px;
-    right: 110px;
-    margin: auto;
-    border-radius: 10px;
-    bottom: 0;
-    box-shadow: none;
-    /* background: #2C3C57; */
-   
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 100px;
+  right: 110px;
+  margin: auto;
+  border-radius: 10px;
+  bottom: 0;
+  box-shadow: none;
+  /* background: #2C3C57; */
 }
 
-.ContactLeftSection > p{
-    color: #374151;
- 
-    font-weight: 500;
-    font-size: 20px;
+.ContactLeftSection > p {
+  color: #374151;
+
+  font-weight: 500;
+  font-size: 20px;
+  padding: 5px 0;
+  margin-left: 5px;
+}
+
+.ContactLeftSectionContactDetails > p {
+  color: #374151;
+  font-weight: 500;
+  font-size: 20px;
+  padding: 2px 2px;
+}
+
+.ContactLeftSectionContactDetails > p > span {
+  font-weight: 700;
+  padding-right: 1px;
+}
+
+.ContactLeftSectionIcons {
+  display: flex;
+  padding: 30px 0;
+  flex-wrap: wrap;
+}
+
+.ContactLeftSectionIcons > img {
+  width: 65px;
+  cursor: pointer;
+}
+.ContactRightSection > p {
+  color: #374151;
+  font-weight: 500;
+  font-size: 20px;
+  padding: 2px 0;
+}
+
+.ContactRightSection > input {
+  border: 1px solid #808080;
+  border-radius: 5px;
+  width: 100%;
+  padding: 5px 5px;
+  font-size: 20px;
+}
+
+.ContactRightSection > textarea {
+  border: 1px solid #808080;
+  border-radius: 5px;
+  width: 100%;
+  padding: 10px 10px;
+  font-size: 20px;
+}
+
+p.get-in {
+  /* color: linear-gradient(to right, #090d14 10%, #35435f 90%); */
+  color: #141722;
+}
+
+.rightsec {
+  background: linear-gradient(to bottom, #090d14 10%, #35435f 90%);
+}
+
+@media screen and (max-width: 800px) {
+  .ContactContainer {
+    flex-direction: column;
+  }
+
+  .ContactContainer > div {
+    width: 100%;
+    padding: 20px 20px;
+  }
+
+  .ContactLeftSection > p {
+    font-size: 15px;
     padding: 5px 0;
-    margin-left: 5px;
-}
+  }
 
-.ContactLeftSectionContactDetails > p{
+  .ContactLeftSectionContactDetails > p {
     color: #374151;
     font-weight: 500;
-    font-size: 20px; 
+    font-size: 15px;
     padding: 2px 2px;
- 
-}
+  }
 
-.ContactLeftSectionContactDetails > p > span{
+  .ContactLeftSectionContactDetails > p > span {
     font-weight: 700;
     padding-right: 1px;
-}
-
-.ContactLeftSectionIcons{
-    display: flex;
-    padding: 30px 0;
-    flex-wrap: wrap;
-}
-
-.ContactLeftSectionIcons > img{
-    width: 65px;
+  }
+  .ContactLeftSectionIcons > img {
+    width: 35px;
     cursor: pointer;
-}
-.ContactRightSection > p{
+  }
+  .ContactLeftSectionIcons {
+    display: flex;
+    padding: 10px 0;
+    flex-wrap: wrap;
+  }
+  .ContactRightSection > p {
     color: #374151;
     font-weight: 500;
-    font-size: 20px; 
+    font-size: 15px;
     padding: 2px 0;
-}
+  }
+  .ContactRightSection {
+    margin-top: -30px;
+  }
 
-.ContactRightSection > input{
+  .ContactRightSection > input {
     border: 1px solid #808080;
     border-radius: 5px;
     width: 100%;
-    padding: 5px 5px;
-    font-size: 20px;
-}
+    padding: 2px 2px;
+    font-size: 15px;
+  }
 
-.ContactRightSection > textarea{
+  .ContactRightSection > textarea {
     border: 1px solid #808080;
     border-radius: 5px;
     width: 100%;
     padding: 10px 10px;
-    font-size: 20px;
-} 
-
-p.get-in{
-    /* color: linear-gradient(to right, #090d14 10%, #35435f 90%); */
-    color: #141722;
-
-    
-    }
-
-    .rightsec{
-        background: linear-gradient(to bottom, #090d14 10%, #35435f 90%);
-    }
-    
-
-@media screen and (max-width: 800px) {
-    .ContactContainer{
-        flex-direction: column;
-    }
-
-    .ContactContainer > div {
-        width: 100%;
-        padding: 20px 20px;
-    }
-
-    .ContactLeftSection > p{
-        font-size: 15px;
-        padding: 5px 0;
-    }
-
-    .ContactLeftSectionContactDetails > p{
-        color: #374151;
-        font-weight: 500;
-        font-size: 15px; 
-        padding: 2px 2px;
-    }
-    
-    .ContactLeftSectionContactDetails > p > span{
-        font-weight: 700;
-        padding-right: 1px;
-    }
-    .ContactLeftSectionIcons > img{
-        width: 35px;
-        cursor: pointer;
-    }
-    .ContactLeftSectionIcons{
-        display: flex;
-        padding: 10px 0;
-        flex-wrap: wrap;
-    }
-    .ContactRightSection > p{
-        color: #374151;
-        font-weight: 500;
-        font-size: 15px; 
-        padding: 2px 0;
-    }
-    .ContactRightSection{
-        margin-top: -30px;
-    }
-    
-    .ContactRightSection > input{
-        border: 1px solid #808080;
-        border-radius: 5px;
-        width: 100%;
-        padding: 2px 2px;
-        font-size: 15px;
-    }
-    
-    .ContactRightSection > textarea{
-        border: 1px solid #808080;
-        border-radius: 5px;
-        width: 100%;
-        padding: 10px 10px;
-        font-size: 15px;
-    } 
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 470px) {
-    .ContactLeftSection > h1 {
-        font-size: 30px;
-        width: 200px;
-    }
+  .ContactLeftSection > h1 {
+    font-size: 30px;
+    width: 200px;
+  }
 
-    .ContactLeftSection > h1::before {
-        height: 5px;
-        width: 100px;
-        left: 20px;
-    }
-    
-    .ContactLeftSection > h1::after {
-        height: 5px;
-        width: 30px;
-        right: 40px;
-    }
+  .ContactLeftSection > h1::before {
+    height: 5px;
+    width: 100px;
+    left: 20px;
+  }
 
+  .ContactLeftSection > h1::after {
+    height: 5px;
+    width: 30px;
+    right: 40px;
+  }
 }
